--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0..0.{build}
 assembly_info:
   patch: true
-  file: Wox.Spype/Properties/AssemblyInfo.cs
+  file: 'Wox.Spype/Properties/AssemblyInfo.cs'
   assembly_version: $(appveyor_build_version)
   assembly_file_version: $(appveyor_build_version)
