Fix parse appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,5 +10,5 @@ before_build:
 test:
   # assemblies to test - optional
   assemblies:
-    - **\Wox.Skype.Test\bin\$(configuration)\Wox.Skype.Test.dll
+    - '**\Wox.Skype.Test\bin\$(configuration)\Wox.Skype.Test.dll'
 
