Fix artifacts Remove old badge status

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,4 +15,6 @@ test:
     - '**\Wox.Skype.Test\bin\$(configuration)\Wox.Skype.Test.dll'
 
 artifacts:
-  - path:'**\Wox.Skype\Wox.Skype\bin\$(configuration)\Wox.Skype.wox'
+ 
+  # pushing a single file
+  - path: '**\Wox.Skype\Wox.Skype\bin\$(configuration)\Wox.Skype.wox'
