--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,9 @@ version: 1.0.0.{build}
 cache:
   - packages -> **\packages.config 
 
+before_build:
+  - cmd: regsvr32 "%APPVEYOR_BUILD_FOLDER%\Interop.SKYPE4COMLib.dll"
+
 branches:
   only:
     - master
