Changes reg Skype dll com

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ branches:
     - master
 
 before_build:
-  - regsvr32 "%APPVEYOR_BUILD_FOLDER%\Interop.SKYPE4COMLib.dll"
+  - regsvr32 /s "$(APPVEYOR_BUILD_FOLDER)\Interop.SKYPE4COMLib.dll"
   - nuget restore
 
 test:
