--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,10 +10,12 @@ branches:
   only:
     - master
 
-before_build:
+init: 
   - ls
   - cd Wox.Skype
   - regsvr32 /s Interop.SKYPE4COMLib.dll
+
+before_build:
   - nuget restore
 
 test:
