--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ branches:
     - master
 
 init: 
-  - regsvr32 Interop.SKYPE4COMLib.dll
+  - c:\windows\system32\regsvr32 /s Interop.SKYPE4COMLib.dll
 
 before_build:
   - nuget restore
