Change command to `copy`

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ branches:
 
 init: 
   - mkdir "Wox.Skype\bin\$(configuration)\""
-  - cp Interop.SKYPE4COMLib.dll "Wox.Skype\bin\$(configuration)\Interop.SKYPE4COMLib.dll"
+  - copy Interop.SKYPE4COMLib.dll "Wox.Skype\bin\$(configuration)\Interop.SKYPE4COMLib.dll"
 #  - c:\windows\system32\regsvr32 /s Interop.SKYPE4COMLib.dll
 
 before_build:
