--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,8 @@ branches:
     - master
 
 init: 
-  - mkdir "Wox.Skype\bin\$(configuration)\""
+  - mkdir "Wox.Skype\bin\$(configuration)\"
+  - ls
   - copy Interop.SKYPE4COMLib.dll "Wox.Skype\bin\$(configuration)\Interop.SKYPE4COMLib.dll" /Y
 #  - c:\windows\system32\regsvr32 /s Interop.SKYPE4COMLib.dll
 
