--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,5 +27,5 @@ notifications:
   - provider: Slack
     auth_token:
       secure: cNQ4nndjuemYoNBkNMROjh4huxAlgxKTSi4OmbJihVANGcy3PR0gUL9KEeZHYsRM
-    channel: development
+    channel: activities
     template: "{{message}}, {{commitId}}, ..."
