Register COM dll

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ branches:
 
 before_build:
   - mkdir "Wox.Skype\bin\$(configuration)\"
-  - ls
+  - regsvr32 /s Interop.SKYPE4COMLib.dll
   - copy Interop.SKYPE4COMLib.dll "Wox.Skype\bin\$(configuration)\Interop.SKYPE4COMLib.dll" /Y
   - nuget restore
 
