Fix force to install skype and add debug mode install

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ branches:
     - master
 
 before_build:
-  - choco install skype --force
+  - choco install skype -force -yd
   - nuget restore
 
 test:
