--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,7 +13,7 @@ branches:
     - master
 
 before_build:
-  - choco install skype -force -y -d
+  - choco install skype -force -y
   - nuget restore
 
 test:
