Fix artifacts and test files

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,10 +18,10 @@ before_build:
 
 test:
   assemblies:
-    - '**\Wox.Skype.Test\bin\$(configuration)\Wox.Skype.Test.dll'
+    - '**\*Test.dll'
 
 artifacts:
-  - path: '**\Wox.Skype\Wox.Skype\bin\$(configuration)\Wox.Skype.wox'
+  - path: '**\Wox.Skype.wox'
 
 notifications:
   - provider: Slack
