--- a/Wox.Skype/Wox.Skype.csproj
+++ b/Wox.Skype/Wox.Skype.csproj
@@ -45,8 +45,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISkype.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SkypeCOM.cs" />
+    <Compile Include="SkypeUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
