--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,19 @@ version: 1.0.0.{build}
 build:
   project: Wox.Skype.sln
 
+init:
+  - git config --global core.autocrlf true
+
+environment:
+  nunitPath: 'packages\NUnit.Runners.2.6.4\tools\nunit-console-x86.exe'
+  reportPath: 'packages\ReportGenerator.2.1.4.0\ReportGenerator.exe'
+  openPath: 'packages\OpenCover.4.5.3723\OpenCover.Console.exe'
+  coverPath: 'packages\coveralls.io.1.3.4\tools\coveralls.net.exe'
+  testDir: 'Wox.Skype.Test\bin\Debug'
+  testDlls: 'Wox.Skype.Test.dll'
+  COVERALLS_REPO_TOKEN:
+    secure: nhZlROX6ElGcNP+EWzsmZt6ihx3hgLZmt7aRGoR5YVCbgfkmpbsdLd5xm2vDybsa
+
 cache:
   - packages -> **\packages.config 
   - C:\ProgramData\chocolatey\bin -> appveyor.yml
@@ -19,6 +32,12 @@ before_build:
 test:
   assemblies:
     - '**\*Test.dll'
+
+after_test: 
+  - ps: >- 
+        & $openPath -target:$nunitPath -targetargs:"$testDlls /nologo /noshadow" -output:"_CodeCoverageResult.xml" -register:user -filter:"+[Wox.Skype*]*" -filter:"-[Wox.Skype*Test]*" -targetdir:"$testDir"
+        & $reportPath  -reports:_CodeCoverageResult.xml -targetdir:coverage
+        & & $coverPath --opencover -i _CodeCoverageResult.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
 
 artifacts:
   - path: '**\Wox.Skype.wox'
