--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,10 +34,10 @@ test:
     - '**\*Test.dll'
 
 after_test: 
-  - ps: >- 
-        & $openPath -target:$nunitPath -targetargs:"$testDlls /nologo /noshadow" -output:"_CodeCoverageResult.xml" -register:user -filter:"+[Wox.Skype*]*" -filter:"-[Wox.Skype*Test]*" -targetdir:"$testDir"
-        & $reportPath  -reports:_CodeCoverageResult.xml -targetdir:coverage
-        & & $coverPath --opencover -i _CodeCoverageResult.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
+  - ps: & $openPath -target:$nunitPath -targetargs:"$testDlls /nologo /noshadow" -output:"_CodeCoverageResult.xml" -register:user -filter:"+[Wox.Skype*]*" -filter:"-[Wox.Skype*Test]*" -targetdir:"$testDir"
+  - ps: & $coverPath --opencover -i _CodeCoverageResult.xml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID
+# & $reportPath  -reports:_CodeCoverageResult.xml -targetdir:coverage
+        
 
 artifacts:
   - path: '**\Wox.Skype.wox'
