Add openPath env

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,6 +10,7 @@ environment:
   nunitPath: 'packages\NUnit.Runners.2.6.4\tools\nunit-console-x86.exe'
   reportPath: 'packages\ReportGenerator.2.1.4.0\ReportGenerator.exe'
   coverPath: 'packages\coveralls.io.1.3.4\tools\coveralls.net.exe'
+  openPath: 'packages\OpenCover.4.5.3723\OpenCover.Console.exe'
   testDir: 'Wox.Skype.Test\bin\Debug'
   testDlls: 'Wox.Skype.Test.dll'
   coverResultFile: '_CodeCoverageResult.xml'
@@ -34,8 +35,8 @@ test:
     - '**\*Test.dll'
 
 after_test:
-  - cmd: %openPath% -target:$nunitPath -targetargs:"%testDlls% /nologo /noshadow" -output:"%coverResultFile%" -register:user -filter:"+[Wox.Skype*]*" -filter:"-[Wox.Skype*Test]*" -targetdir:"%testDir%"
-  - cmd: %coverPath% --opencover -i %coverResultFile% --repoToken %COVERALLS_REPO_TOKEN% --commitId %APPVEYOR_REPO_COMMIT% --commitBranch %APPVEYOR_REPO_BRANCH% --commitAuthor %APPVEYOR_REPO_COMMIT_AUTHOR% --commitEmail %APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL% --commitMessage %APPVEYOR_REPO_COMMIT_MESSAGE% --jobId %APPVEYOR_JOB_ID%
+  - %openPath% -target:$nunitPath -targetargs:"%testDlls% /nologo /noshadow" -output:"%coverResultFile%" -register:user -filter:"+[Wox.Skype*]*" -filter:"-[Wox.Skype*Test]*" -targetdir:"%testDir%"
+  - %coverPath% --opencover -i %coverResultFile% --repoToken %COVERALLS_REPO_TOKEN% --commitId %APPVEYOR_REPO_COMMIT% --commitBranch %APPVEYOR_REPO_BRANCH% --commitAuthor %APPVEYOR_REPO_COMMIT_AUTHOR% --commitEmail %APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL% --commitMessage %APPVEYOR_REPO_COMMIT_MESSAGE% --jobId %APPVEYOR_JOB_ID%
 
 # & $reportPath  -reports:_CodeCoverageResult.xml -targetdir:coverage
 
