--- a/appveyor.yml
+++ b/appveyor.yml
@@ -54,7 +54,7 @@ deploy:
   prerelease: false
   on:
     branch: master
-    appveyor_repo_tag: false
+    appveyor_repo_tag: true
 
 notifications:
   - provider: Slack
