--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,7 +73,7 @@ on_success:
 
           cd gh-pages
 
-          git clone -b gh-pages ..\.git .
+          git clone -b gh-pages git@github.com:Ridermansb/wox.skype.git .
 
           cd coverage
 
@@ -84,8 +84,6 @@ on_success:
           git add .
 
           git commit -am "Update coverage code repost"
-
-          git remote set-url origin git@github.com:Ridermansb/wox.skype.git
 
   - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:GITHUB_ACCESS_TOKEN):x-oauth-basic@github.com`n"
   - git push origin gh-pages
