--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,15 +21,13 @@ environment:
 
 cache:
   - packages -> **\packages.config 
-  - C:\ProgramData\chocolatey\bin -> appveyor.yml
-  - C:\ProgramData\chocolatey\lib -> appveyor.yml  
 
 branches:
   only:
     - master
 
 before_build:
-  - choco install skype -force -y
+  - regsvr32 /s Skype4COM.dll
   - nuget restore
 
 test_script:
