--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,7 +69,7 @@ on_success:
 
           git config --global credential.helper store
   - 7z a coverage.zip coverage/**
-  - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:GITHUB_ACCESS_TOKEN):x-oauth-basic@github.com`n"
+  - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:GITHUB_ACCESS_TOKEN):x-oauth-basic@github.com/Ridermansb/wox.skype.git"
   - cmd: >-
           mkdir gh-pages
 
