--- a/appveyor.yml
+++ b/appveyor.yml
@@ -90,7 +90,7 @@ on_success:
           
           git add .
 
-          git commit -am "Update coverage code repost"
+          git commit -am "Update coverage code report"
 
   
   - git push origin gh-pages
