--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,16 +69,5 @@ on_success:
   - git config --global credential.helper store
   - git config --global user.email "appveyor@bindsolution.com"
   - git config --global user.name "AppVeyor"
-  - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:GITHUB_ACCESS_TOKEN):x-oauth-basic@github.com/Ridermansb/wox.skype.git"
-  - cmd: >- 
-          mkdir gh-pages & cd gh-pages
-
-          git clone -b gh-pages https://github.com/Ridermansb/wox.skype.git .
-  - ps: Move-Item coverage\* gh-pages\coverage -Force
-  - cmd: >- 
-          git add .
-
-          git commit -am "Update coverage code report"
-
-          git push origin gh-pages
-
+  - ps: >-
+      . .\upload-coverage-report.ps1
